chore : handles KeyCloakException (#1187)
* chore : handles KeyCloakException

* add details

* sync versions

* Implement code review comments

* implement code review comments

* fix testcase failure

* fixes disabled test

* adds more assertions

* Removed linent

* spotless fix